logs/products.portaltaxonomy.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/PortalTaxonomy'...
Listing './lib/python3.5/site-packages/Products/PortalTaxonomy/Extensions'...
Compiling './lib/python3.5/site-packages/Products/PortalTaxonomy/Extensions/Install.py'...
***   File "./lib/python3.5/site-packages/Products/PortalTaxonomy/Extensions/Install.py", line 92
    print 'UID metadata column already exists'
                                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Products/PortalTaxonomy/__init__.py'...
***   File "./lib/python3.5/site-packages/Products/PortalTaxonomy/__init__.py", line 26
    print "Could not import CustomizationPolicy.  Maybe Plone >= 3?"
                                                                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/Products/PortalTaxonomy/content'...
Listing './lib/python3.5/site-packages/Products/PortalTaxonomy/examples'...
Listing './lib/python3.5/site-packages/Products/PortalTaxonomy/fields'...
Listing './lib/python3.5/site-packages/Products/PortalTaxonomy/interfaces'...
Listing './lib/python3.5/site-packages/Products/PortalTaxonomy/skins'...
Listing './lib/python3.5/site-packages/Products/PortalTaxonomy/skins/PortalTaxonomy'...
Compiling './lib/python3.5/site-packages/Products/PortalTaxonomy/skins/PortalTaxonomy/getCategorizedContent.py'...
***   File "./lib/python3.5/site-packages/Products/PortalTaxonomy/skins/PortalTaxonomy/getCategorizedContent.py", line 8
    return pc.searchResults(portal_type=['TaxonomyType',], review_state='published', getCategories=category_uids, sort_on='sortable_title')
                                                                                                                                          ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/PortalTaxonomy/skins/PortalTaxonomy/getSubcategoryUIDs.py'...
***   File "./lib/python3.5/site-packages/Products/PortalTaxonomy/skins/PortalTaxonomy/getSubcategoryUIDs.py", line 14
    return [c.UID for c in context.portal_catalog(query)]
                                                        ^
SyntaxError: 'return' outside function

Listing './lib/python3.5/site-packages/Products/PortalTaxonomy/tests'...
Compiling './lib/python3.5/site-packages/Products/PortalTaxonomy/tests/framework.py'...
***   File "./lib/python3.5/site-packages/Products/PortalTaxonomy/tests/framework.py", line 69
    print 'Unable to locate Testing package.',
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/Products/PortalTaxonomy/widgets'...
Listing './lib/python3.5/site-packages/Products.PortalTaxonomy-0.5.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
